--- a/circle.yml
+++ b/circle.yml
@@ -5,10 +5,12 @@ machine:
     MAX_STAGE: 2
   python: 
     version: 3.5.1
-    
+
 dependencies:
   pre:
-    - sudo apt-get update; sudo apt-get -y install git quilt kpartx realpath qemu-user-static debootstrap zerofree pxz zip
+    - sudo apt-get update
+    - sudo apt-get -y install git quilt kpartx realpath qemu-user-static debootstrap zerofree pxz zip
+    - sudo apt-get install pip3 
     - sudo pip3 install git+https://github.com/g2p/vido.git
 
   post:
